D3可視化-新增長條圖

--- a/Web/crawl/templates/wordcloud.html
+++ b/Web/crawl/templates/wordcloud.html
@@ -6,7 +6,7 @@
     <div class="uk-container uk-container-expand">
         <fieldset class="uk-fieldset">
         <legend class="uk-legend noto uk-heading-bullet uk-light">
-            詞雲 Word Cloud {{ iterator }}
+            詞雲 Word Cloud
         </legend>
         <div class="uk-grid-divider uk-padding-small" uk-grid>
             <!-- 資料庫 theme 選單 -->
