--- a/Web/crawl/templates/basic.html
+++ b/Web/crawl/templates/basic.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crawl Curation</title>
+    {% load static %}
+    <link href="{% static 'js/nvd3-1.8.6/build/nv.d3.css' %}" rel="stylesheet" />
+    <!--<script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>-->
+    <script src="{% static 'js/d3.v3.js' %}"></script>
+    <script src="{% static 'js/nv.d3.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/css/uikit.min.css" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit-icons.min.js"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
-    <!-- 講究字體：思源黑體 -->
-    <link href="//fonts.googleapis.com/earlyaccess/notosanstc.css" rel="stylesheet">
     <style type="text/css">
         a:link {
             text-decoration: none;
@@ -72,6 +72,8 @@
 </head>
 
 <body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit-icons.min.js"></script>
 {% include "nav.html"%}
 
 {% block mainbody %}
@@ -79,5 +81,9 @@
 {% endblock %}
 
 {% include "copyright.html" %}
+<!--<script src="../static/js/d3.js" type="text/javascript"></script>-->
+<!--<script src="../static/js/nvd3-1.7.1.js" type="text/javascript"></script>-->
+<!-- 講究字體：思源黑體 -->
+<link href="//fonts.googleapis.com/earlyaccess/notosanstc.css" rel="stylesheet">
 </body>
 </html>
