--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -34,6 +34,9 @@
                                                     <a href="/wc/">詞雲 Word Cloud</a>
                                                 </div>
                                                 <div class="noto">
+                                                    <a href="/bar_chart/">直條圖 Bar Chart</a>
+                                                </div>
+                                                <div class="noto">
                                                     <a href="/get/">臉書爬蟲</a>
                                                 </div>
                                                 <div class="noto">
@@ -65,6 +68,15 @@
                                             </span>
                                             詞雲 Word Cloud
                                         </a></li>
+                                        <li><a href="/bar_chart/" class="noto">
+                                            {% load static %}
+                                            <span class="uk-icon uk-icon-image uk-dark uk-margin-small-right">
+                                            <svg fill="#999999" width="20" height="20">
+                                                <path xmlns="http://www.w3.org/2000/svg" style="text-indent:0;text-align:start;line-height:normal;text-transform:none;block-progression:tb;-inkscape-font-specification:Bitstream Vera Sans" d="M 17 2 L 17 22 L 21 22 L 21 2 L 17 2 z M 12 6 L 12 22 L 16 22 L 16 6 L 12 6 z M 7 10 L 7 22 L 11 22 L 11 10 L 7 10 z M 2 14 L 2 22 L 6 22 L 6 14 L 2 14 z" overflow="visible" enable-background="accumulate" font-family="Bitstream Vera Sans"/>
+                                            </svg>
+                                            </span>
+                                            直條圖 Bar Chart
+                                        </a></li>
                                         <li><a href="/text/" class="noto">
                                             <span uk-icon="icon: database;" class="uk-dark uk-margin-small-right">
                                             </span>
@@ -73,7 +85,7 @@
                                         <li><a href="/get/" class="noto">
                                             <span uk-icon="icon: facebook;" class="uk-dark uk-margin-small-right">
                                             </span>
-                                            臉書爬蟲
+                                            <del>臉書爬蟲</del>
                                         </a></li>
                                     </ul>
                                 </div>
