--- a/Web/crawl/templates/index_bg.html
+++ b/Web/crawl/templates/index_bg.html
@@ -1,3 +1,11 @@
+<style>
+    .script-overlap {
+        position: relative;
+        width: auto;
+        height: auto;
+    }
+</style>
+
 <div>
         <div class="script-overlap uk-container">
             <script>
