--- a/Web/crawl/templates/text.html
+++ b/Web/crawl/templates/text.html
@@ -1,5 +1,18 @@
 {% extends "basic.html" %}
 
+{% block stylesheet %}
+<style>
+    .top-button {
+            position: fixed;
+            left: 95%;
+            top: 95%;
+            transform: translate(-50%, -50%);
+            width: auto;
+            height: auto;
+        }
+</style>
+{% endblock %}
+
 {% block mainbody %}
 
 <div class="uk-section-secondary uk-padding uk-preserve-color">
