--- a/Web/crawl/templates/Visual/bubble.html
+++ b/Web/crawl/templates/Visual/bubble.html
@@ -1,15 +1,24 @@
 {% extends "basic.html" %}
 
-{% block mainbody %}
+{% block head_script %}
+    <script src="https://d3js.org/d3.v4.min.js" type="text/javascript"></script>
+{% endblock %}
 
+{% block stylesheet %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/bubble.css' %}"/>
+{% endblock %}
+
+{% block mainbody %}
 <div class="uk-section-secondary uk-padding uk-preserve-color">
     <div class="uk-container uk-container-expand">
-        <legend class="uk-legend noto uk-heading-bullet uk-light">
+        <legend class="uk-legend noto uk-heading-bullet uk-light" style="z-index:2;">
             Bubble Chart
         </legend>
-        <script type="text/javascript">
-        //TODO: ...
-        </script>
     </div>
 </div>
+<svg id="chart" width="960" height="800"></svg>
+
+{% load static %}
+<script src="{% static 'js/bubblechart.js' %}"></script>
 {% endblock %}
