--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -2,13 +2,13 @@
     <div class="uk-section-secondary uk-preserve-color">
         <div uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container;
         cls-active: uk-navbar-sticky uk-navbar-transparent uk-background-secondary uk-light;
-        cls-inactive: uk-navbar-transparent uk-light; top: 200">
+        cls-inactive: uk-navbar-transparent uk-light; top: 200" style="z-index: 98;">
 
-            <nav class="uk-navbar-container">
+            <nav class="uk-navbar-container" >
                 <div class="uk-container uk-container-large">
-                    <div uk-navbar>
+                    <div uk-navbar style="z-index: 99;">
 
-                        <ul class="uk-navbar-nav uk-transition-toggle" tabindex="0">
+                        <ul class="uk-navbar-nav uk-transition-toggle" tabindex="0" >
                             <div class="uk-offcanvas-content">
 
                                 <a class="uk-navbar-toggle uk-hidden@m "
@@ -35,6 +35,9 @@
                                                 </div>
                                                 <div class="noto">
                                                     <a href="/bar_chart/">直條圖 Bar Chart</a>
+                                                </div>
+                                                <div class="noto">
+                                                    <a href="/bubble/">氣泡圖 Bubble Chart</a>
                                                 </div>
                                                 <div class="noto">
                                                     <a href="/get/">臉書爬蟲</a>
@@ -70,12 +73,21 @@
                                         </a></li>
                                         <li><a href="/bar_chart/" class="noto">
                                             {% load static %}
-                                            <span class="uk-icon uk-icon-image uk-dark uk-margin-small-right">
+                                            <span class="uk-icon uk-dark uk-margin-small-right">
                                             <svg fill="#999999" width="20" height="20">
-                                                <path xmlns="http://www.w3.org/2000/svg" style="text-indent:0;text-align:start;line-height:normal;text-transform:none;block-progression:tb;-inkscape-font-specification:Bitstream Vera Sans" d="M 17 2 L 17 22 L 21 22 L 21 2 L 17 2 z M 12 6 L 12 22 L 16 22 L 16 6 L 12 6 z M 7 10 L 7 22 L 11 22 L 11 10 L 7 10 z M 2 14 L 2 22 L 6 22 L 6 14 L 2 14 z" overflow="visible" enable-background="accumulate" font-family="Bitstream Vera Sans"/>
+                                                <path xmlns="http://www.w3.org/2000/svg" d="M0 6h4v10H0zM6 0h4v16H6zM12 4h4v12h-4z"/>
                                             </svg>
                                             </span>
                                             直條圖 Bar Chart
+                                        </a></li>
+                                        <li><a href="/bubble/" class="noto">
+                                            {% load static %}
+                                            <span class="uk-icon uk-dark uk-margin-small-right">
+                                            <svg fill="#999999" width="20" height="20">
+                                                <path xmlns="http://www.w3.org/2000/svg" d="M15.989 8.011a.84.84 0 0 1-.856.856c-.485 0-.856-.371-.856-.856s.371-.856.856-.856a.84.84 0 0 1 .856.856zm-2.282 2.853c-1.113 0-1.997.885-1.997 1.997s.885 1.997 1.997 1.997 1.997-.885 1.997-1.997-.885-1.997-1.997-1.997zm-5.736 1.598A3.986 3.986 0 0 1 4.005 16 4.007 4.007 0 0 1 .01 12.005c0-1.141.485-2.168 1.227-2.882C.838 8.268.581 7.297.581 6.299.581 2.847 3.406.022 6.858.022s6.277 2.825 6.277 6.277a6.254 6.254 0 0 1-5.164 6.163zm4.309-6.163c0-2.996-2.425-5.421-5.421-5.421S1.437 3.303 1.437 6.299c0 .827.2 1.598.514 2.283a3.904 3.904 0 0 1 2.054-.571 3.972 3.972 0 0 1 3.966 3.595c2.454-.514 4.309-2.711 4.309-5.307z"/>
+                                            </svg>
+                                            </span>
+                                            氣泡圖 Bubble Chart
                                         </a></li>
                                         <li><a href="/text/" class="noto">
                                             <span uk-icon="icon: database;" class="uk-dark uk-margin-small-right">
