修正伺服器環境出現的Bug
狗幹，Word Cloud畫的圖要想辦法用API讀寫Google Cloud Storage

--- a/Web/crawl/static/css/basic.css
+++ b/Web/crawl/static/css/basic.css
@@ -16,6 +16,10 @@ a:active {
 }
 /* 在所不惜，思源黑體 */
 .noto {
-    font-family: "Noto Sans TC", sans-serif;
+    font-family: "Noto Sans TC", sans-serif !important; 
 }
-
+.uk-navbar-nav > li > a,
+.uk-navbar-item,
+.uk-navbar-toggle {
+    font-family: "Noto Sans TC", sans-serif !important;
+}
