--- a/Web/crawl/templates/Visual/wordcloud.html
+++ b/Web/crawl/templates/Visual/wordcloud.html
@@ -34,7 +34,7 @@
             <!-- Wordcloud 即時繪製的詞雲圖片 -->
             <div class="uk-width-expand">
             {% load static %}
-            <img data-src="{% static "media/wordcloud_plot.png" %}" class="uk-align-left uk-animation-fade" uk-img>
+            <img data-src="{% static 'media/wordcloud_plot.png' %}" class="uk-align-left uk-animation-fade" uk-img>
             </div>
         </div>
         </fieldset>
