--- a/Web/crawl/templates/help.html
+++ b/Web/crawl/templates/help.html
@@ -31,10 +31,10 @@
                 詞雲 Word Cloud: 透過文本分析詞頻，視覺化後之結果，可用於呈現熱門字詞。
             </li>
             <li>
-                Blah Blah
+                直條圖：請自己看
             </li>
             <li>
-                Blah Blah
+                氣泡圖：啊 這做出來看起來就是很屌啊
             </li>
         </ul>
     </div>
