--- a/Web/crawl/templates/nav.html
+++ b/Web/crawl/templates/nav.html
@@ -59,11 +59,11 @@
                             </div>
                             <!-- 網頁標題 -->
                             <li class="uk-active uk-visible@m uk-hidden-touch">
-                                <a href="/">Crawl Curation</a>
+                                <a href="/" class="noto">Crawl Curation</a>
                             </li>
                             <!-- 電腦板選單 -->
                             <li class="uk-button uk-button-text uk-visible@m uk-hidden-touch">
-                                <a href="#">Services</a>
+                                <a href="#" class="noto">Services</a>
                                 <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
                                     <ul class="uk-nav uk-text-left uk-navbar-dropdown-nav">
                                         <li><a href="/wc/" class="noto">
