--- a/Web/crawl/templates/Visual/bubble.html
+++ b/Web/crawl/templates/Visual/bubble.html
@@ -5,8 +5,40 @@
 {% endblock %}
 
 {% block stylesheet %}
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bubble.css' %}"/>
+    <style>
+        /* 泡泡圖的CSS樣式 */
+        .node {
+            cursor: pointer;
+        }
+
+        .node:hover {
+            stroke: #fff;
+            stroke-width: 1px;
+        }
+
+        .node--leaf {
+            fill: white;
+        }
+
+        .label {
+            font: 30px "Noto Sans TC", sans-serif;
+            text-anchor: middle;
+            color: "#222222";
+        }
+
+        .label,
+        .node--root,
+        .node--leaf {
+            pointer-events: none;
+        }
+
+        #chart {
+            position: relative;
+            width: 100%; height: 50%;
+            transform: translate(0, -25%);
+            z-index: 1;
+        }
+    </style>
 {% endblock %}
 
 {% block mainbody %}
@@ -20,5 +52,5 @@
 <svg id="chart" width="960" height="800"></svg>
 
 {% load static %}
-<script src="{% static 'js/bubblechart.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bubblechart.js' %}"></script>
 {% endblock %}
