SEO練習 其實沒啥

--- a/Web/crawl/templates/basic.html
+++ b/Web/crawl/templates/basic.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Li Yen Tseng, J.S.Li, Kevin Shih">
+    <meta name="description" content="A capstone project that serves visualized data by crawling & analyzing articles.">
     <title>Crawl Curation</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.2/js/uikit-icons.min.js"></script>
