登入機制 & 抓文章的function
Web\crawl\facebook\mlab.py
getNewsInStringList()

--- a/Web/crawl/templates/copyright.html
+++ b/Web/crawl/templates/copyright.html
@@ -1,4 +1,4 @@
-<div class="uk-section-muted uk-preserve-color uk-padding" id="copyright" style="z-index: 99;">
+<div class="uk-section-muted uk-preserve-color uk-padding noto" id="copyright" style="z-index: 99;">
     <div class="uk-container uk-background-muted uk-dark">
         <div class="uk-grid-medium uk-grid-divider" uk-grid>
             <div>
