--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -9,14 +9,14 @@
 <style>
     .center-overlap {
             position: absolute;
-            top: 30%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             display: block;
             width: auto;
             height: auto;
             text-align:center;
-        }
+    }
     .chevron-down-position {
             position: absolute;
             left: 50%;
@@ -25,11 +25,66 @@
             display: block;
             width: auto;
             height: auto;
-        }
+    }
+    #snackbar {
+        min-width: 250px;
+        transform: translate(-50%, 0);
+        padding: 16px;
+        position: fixed;
+        z-index: 1;
+        left: 50%;
+        bottom: 80%;
+    }
+</style>
+<!--動畫動畫動畫!!-->
+<style>
+    .fade {
+        color:#f2f;
+        -webkit-animation: fade ease-out 1.5s infinite;
+        -moz-animation: fade ease-out 1.5s infinite;
+        -o-animation: fade ease-out 1.5s infinite;
+        animation: fade ease-out 1.5s infinite;
+    }
+
+    @keyframes fade {
+        0% { opacity: 0; transform: translate(0,-30%);}
+        50% { opacity: 1;}
+        100% { opacity: 0; transform: translate(0,50%);}
+    }
+
+    @-webkit-keyframes fade{
+        0% { opacity: 0; transform: translate(0,-30%);}
+        50% { opacity: 1;}
+        100% { opacity: 0; transform: translate(0,50%);}
+    }
+
+    @-moz-keyframes fade{
+        0% { opacity: 0; transform: translate(0,-30%);}
+        50% { opacity: 1;}
+        100% { opacity: 0; transform: translate(0,50%);}
+    }
+
+    @-o-keyframes fade{
+        0% { opacity: 0; transform: translate(0,-30%);}
+        50% { opacity: 1;}
+        100% { opacity: 0; transform: translate(0,50%);}
+    }
 </style>
 {% endblock %}
 
 {% block mainbody %}
+{% if message %}
+    <div id="snackbar" class="uk-alert-danger noto" uk-alert>
+        <a class="uk-alert-close" uk-close></a>
+        <p>{{ message }}</p>
+    </div>
+{% elif signup_error %}
+    <div id="snackbar" class="uk-alert-danger noto" uk-alert>
+        <a class="uk-alert-close" uk-close></a>
+        <p>{{ signup_error }}</p>
+    </div>
+{% endif %}
+<!--首頁-->
 <div class="uk-background-secondary">
 
         {% include "index_bg.html" %}
@@ -45,7 +100,7 @@
         </div>
         <div class="chevron-down-position uk-visible@m">
             <a href="#about" uk-scroll>
-            <span uk-icon="icon: chevron-down; ratio: 3" class="uk-light"></span>
+            <span uk-icon="icon: chevron-down; ratio: 2" class="uk-light fade"></span>
             </a>
         </div>
     </div>
@@ -77,7 +132,7 @@
                     <div class="uk-padding-small">
                     <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
                       uk-light uk-background-blend-screen uk-background-secondary"
-                        style="background-image: url({% static "media/wordcloud_index.png" %});" uk-parallax="bgy: -70">
+                        style="background-image: url({% static 'media/wordcloud_index.png' %});" uk-parallax="bgy: -70">
                         <div class="noto uk-overlay uk-position-center
                         uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                         </div>
@@ -94,7 +149,7 @@
                     <div class="uk-padding-small">
                     <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
                       uk-light uk-background-blend-screen uk-background-secondary"
-                         style="background-image: url({% static "media/barchart_index.jpg" %});" uk-parallax="bgy: -70">
+                         style="background-image: url({% static 'media/barchart_index.jpg' %});" uk-parallax="bgy: -70">
                         <div class="noto uk-overlay uk-position-center
                         uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                         </div>
@@ -136,7 +191,7 @@
                     <div class="uk-padding-small">
                     <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
                       uk-light"
-                         style="background-image: url({% static "media/bubblechart_index.jpg" %});" uk-parallax="bgy: -70">
+                         style="background-image: url({% static 'media/bubblechart_index.jpg' %});" uk-parallax="bgy: -70">
                         <div class="noto uk-overlay uk-position-center
                         uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
                         </div>
