--- a/Web/crawl/templates/account/signup_form.html
+++ b/Web/crawl/templates/account/signup_form.html
@@ -4,21 +4,21 @@
         <legend class="uk-legend noto">Sign Up</legend>
         <hr>
         {% csrf_token %}
-        <div class="uk-child-width-1-2 uk-grid-collapse uk-margin-small" uk-grid>
+        <div class="uk-child-width-1-2 uk-grid-small uk-margin-small" uk-grid>
             <div>
-                <input class="uk-input uk-first-column " type="text" name="first" placeholder="名字" />
+                <input class="uk-input uk-first-column " type="text" name="first" placeholder="名字" required/>
             </div>
             <div>
-                <input class="uk-input" type="text" name="last" placeholder="姓氏" />
+                <input class="uk-input" type="text" name="last" placeholder="姓氏" required/>
             </div>
         </div>
         <div class="uk-inline uk-margin-small uk-width-1-1">
             <span class="uk-form-icon" uk-icon="icon: mail"></span>
-            <input class="uk-input" type="text" name="email" placeholder="Your Email" />
+            <input class="uk-input" type="text" name="email" placeholder="Your Email" required/>
         </div>
         <div class="uk-inline uk-margin-small uk-width-1-1">
             <span class="uk-form-icon" uk-icon="icon: lock"></span>
-            <input class="uk-input" type="text" name="meema" placeholder="Password" />
+            <input class="uk-input" type="password" name="meema" placeholder="Password" required/>
         </div>
         <div class="uk-margin-medium">
             <input class="uk-button-primary uk-button uk-align-center noto"
