--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -85,121 +85,119 @@
     </div>
 {% endif %}
 <!--首頁-->
-<div class="uk-background-secondary">
+<div id="heading" class="uk-background-secondary">
 
-        {% include "index_bg.html" %}
+    {% include "index_bg.html" %}
 
-        <div class="center-overlap uk-container uk-background-transparent" uk-scrollspy="cls:uk-animation-fade;">
-            <h1 class="noto uk-text-center uk-heading-primary uk-light"><span>Crawl Curation</span></h1>
-            <h3 class="noto uk-text-center uk-light">CSIE Independent Study</h3><br>
-            <a href="#about" uk-scroll>
-                <button class="noto uk-button uk-align-center uk-button-default uk-light">
-                START
-                </button>
-            </a>
-        </div>
-        <div class="chevron-down-position uk-visible@m">
-            <a href="#about" uk-scroll>
-            <span uk-icon="icon: chevron-down; ratio: 2" class="uk-light fade"></span>
-            </a>
-        </div>
+    <div class="center-overlap uk-container uk-background-transparent" uk-scrollspy="cls:uk-animation-fade;">
+        <h1 class="noto uk-text-center uk-heading-primary uk-light"><span>Crawl Curation</span></h1>
+        <h3 class="noto uk-text-center uk-light">CSIE Independent Study</h3><br>
+        <a href="#about" uk-scroll>
+            <button class="noto uk-button uk-align-center uk-button-default uk-light">
+            START
+            </button>
+        </a>
     </div>
-
-    <div class="uk-section uk-preserve-color" style="background-color: #222222";><p> </p><p> </p><p> </p></div>
-
-    <div class="uk-section-secondary uk-preserve-color" id="about">
-        <div class="uk-dark" uk-height-viewport="expand: true">
-            <!-- 第一排 -->
-            <div class="uk-container uk-container-expand" style="background-color: #404040;">
-                <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
-                     uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
-                    <!-- 文字 -->
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-light uk-flex">
-                        <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
-                            <a href="/wc/"><h3 class="noto">詞雲
-                            <div class="noto uk-text-small">Word Cloud</div></h3></a>
-                            <p>
-                                透過隱含狄利克雷分佈 (Latent  Dirichlet  Allocation,  LDA)
-                                <br>產生給定數目的主題 (詞彙) 集合<br>
-                                依據主題中每個詞出現的概率，繪製成詞雲 (Word Cloud)
-                            </p>
-                        </div>
-                    </div>
-                    </div>
-                    <!-- 圖片 -->
-                    {% load static %}
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
-                      uk-light uk-background-blend-screen uk-background-secondary"
-                        style="background-image: url({% static 'media/wordcloud_index.png' %});" uk-parallax="bgy: -70">
-                        <div class="noto uk-overlay uk-position-center
-                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div><!-- end 第一排 -->
-            <!-- 第二排 -->
-            <div class="uk-container uk-container-expand" style="background-color: #333333;">
-                <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
-                     uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
-                    <!-- 圖片 -->
-                    {% load static %}
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
-                      uk-light uk-background-blend-screen uk-background-secondary"
-                         style="background-image: url({% static 'media/barchart_index.jpg' %});" uk-parallax="bgy: -70">
-                        <div class="noto uk-overlay uk-position-center
-                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-                        </div>
-                    </div>
-                    </div>
-                    <!-- 文字 -->
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-light uk-flex">
-                        <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
-                            <a href="/bar_chart/"><h3 class="noto">直條圖
-                            <div class="noto uk-text-small">Bar Chart</div></h3></a>
-                            <p>
-                                透過 LDA 主題中每個詞出現的概率<br>使用 D3.js 動態繪製成直條圖
-                            </p>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div><!-- end 第二排 -->
-            <!-- 第三排 -->
-            <div class="uk-container uk-container-expand" style="background-color: #404040;">
-                <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
-                     uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
-                    <!-- 文字 -->
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-light uk-flex">
-                        <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
-                            <a href="/bubble/"><h3 class="noto">氣泡圖
-                            <div class="noto uk-text-small">Grouped Bubble Chart</div></h3></a>
-                            <p>
-                                同一主題之詞彙將集中於同一圓形<br>詞彙概率愈大，則面積愈大<br>
-                                透過集合的概念融合 JavaScript 產生能夠與使用者互動之圖表
-                            </p>
-                        </div>
-                    </div>
-                    </div>
-                    <!-- 圖片 -->
-                    {% load static %}
-                    <div class="uk-padding-small">
-                    <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
-                      uk-light"
-                         style="background-image: url({% static 'media/bubblechart_index.jpg' %});" uk-parallax="bgy: -70">
-                        <div class="noto uk-overlay uk-position-center
-                        uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div><!-- end 第三排 -->
-        </div>
+    <div class="chevron-down-position uk-visible@m">
+        <a href="#about" uk-scroll>
+        <span uk-icon="icon: chevron-down; ratio: 2" class="uk-light fade"></span>
+        </a>
     </div>
+</div>
 
+<div class="uk-section-secondary uk-preserve-color" id="about">
+    <div class="uk-section uk-preserve-color" style="background-color: #222222;"></div>
+    <div class="uk-dark" uk-height-viewport="expand: true">
+        <!-- 第一排 -->
+        <div class="uk-container uk-container-expand" style="background-color: #404040;">
+            <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
+                 uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
+                <!-- 文字 -->
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-light uk-flex">
+                    <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
+                        <a href="/wc/"><h3 class="noto">詞雲
+                        <div class="noto uk-text-small">Word Cloud</div></h3></a>
+                        <p>
+                            透過隱含狄利克雷分佈 (Latent  Dirichlet  Allocation,  LDA)
+                            <br>產生給定數目的主題 (詞彙) 集合<br>
+                            依據主題中每個詞出現的概率，繪製成詞雲 (Word Cloud)
+                        </p>
+                    </div>
+                </div>
+                </div>
+                <!-- 圖片 -->
+                {% load static %}
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                  uk-light uk-background-blend-screen uk-background-secondary"
+                    style="background-image: url({% static 'media/wordcloud_index.png' %});" uk-parallax="bgy: -70">
+                    <div class="noto uk-overlay uk-position-center
+                    uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div><!-- end 第一排 -->
+        <!-- 第二排 -->
+        <div class="uk-container uk-container-expand" style="background-color: #333333;">
+            <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
+                 uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
+                <!-- 圖片 -->
+                {% load static %}
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                  uk-light uk-background-blend-screen uk-background-secondary"
+                     style="background-image: url({% static 'media/barchart_index.jpg' %});" uk-parallax="bgy: -70">
+                    <div class="noto uk-overlay uk-position-center
+                    uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    </div>
+                </div>
+                </div>
+                <!-- 文字 -->
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-light uk-flex">
+                    <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
+                        <a href="/bar_chart/"><h3 class="noto">直條圖
+                        <div class="noto uk-text-small">Bar Chart</div></h3></a>
+                        <p>
+                            透過 LDA 主題中每個詞出現的概率<br>使用 D3.js 動態繪製成直條圖
+                        </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div><!-- end 第二排 -->
+        <!-- 第三排 -->
+        <div class="uk-container uk-container-expand" style="background-color: #404040;">
+            <div class="uk-grid-match uk-grid-medium uk-child-width-1-2@m uk-flex uk-flex-center" uk-grid
+                 uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
+                <!-- 文字 -->
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-light uk-flex">
+                    <div class="noto uk-padding-large uk-text-left uk-margin-auto uk-margin-auto-vertical">
+                        <a href="/bubble/"><h3 class="noto">氣泡圖
+                        <div class="noto uk-text-small">Grouped Bubble Chart</div></h3></a>
+                        <p>
+                            同一主題之詞彙將集中於同一圓形<br>詞彙概率愈大，則面積愈大<br>
+                            透過集合的概念融合 JavaScript 產生能夠與使用者互動之圖表
+                        </p>
+                    </div>
+                </div>
+                </div>
+                <!-- 圖片 -->
+                {% load static %}
+                <div class="uk-padding-small">
+                <div class="uk-inline uk-height-medium uk-background-cover uk-overflow-hidden
+                  uk-light"
+                     style="background-image: url({% static 'media/bubblechart_index.jpg' %});" uk-parallax="bgy: -70">
+                    <div class="noto uk-overlay uk-position-center
+                    uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div><!-- end 第三排 -->
+    </div>
+</div>
 {% endblock %}
