新增 選要爬的網站的頁面/增加Session時效

--- a/Web/crawl/templates/Visual/barchart.html
+++ b/Web/crawl/templates/Visual/barchart.html
@@ -57,4 +57,5 @@
 <script type="text/javascript" src="{% static 'js/nv.d3.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/barchart.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/responsive.d3.js' %}"></script>
+<script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
