--- a/Web/crawl/templates/help.html
+++ b/Web/crawl/templates/help.html
@@ -21,9 +21,9 @@
 {% endblock %}
 
 {% block mainbody %}
-<div class="uk-container-expand">
+<div class="uk-section-secondary uk-preserve-color" uk-height-viewport="offset-top: true">
     {% include "index_bg.html" %}
-    <div class="center-overlap uk-container uk-background-transparent">
+    <div class="center-overlap uk-container">
     <h3 class="noto uk-text-left uk-heading-bullet"><span>使用說明</span></h3>
     <div class="noto uk-text-left">
         <ul class="uk-list uk-list-bullet">
@@ -43,4 +43,5 @@
     </svg>
     </div>
 </div>
+<script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
