--- a/Web/crawl/templates/basic.html
+++ b/Web/crawl/templates/basic.html
@@ -45,10 +45,12 @@
         .uk-navbar-toggle {
             font-family: "Noto Sans TC", sans-serif !important;
         }
+        body {overflow-x: hidden;}
     </style>
 </head>
 
 <body>
+<div id="bg"></div>
 {% include "nav.html"%}
 
 {% block mainbody %}
