--- a/Web/crawl/templates/index_bg.html
+++ b/Web/crawl/templates/index_bg.html
@@ -1,111 +1,100 @@
-<style>
-    .script-overlap {
-        position: relative;
-        width: auto;
-        height: auto;
+<script>
+    var width = 1280,
+        height = 700;
+
+    var nodes = d3.range(100).map(function() { return {radius: Math.random() * 12 + 4}; }),
+        root = nodes[0],
+        color = d3.scale.category10();
+
+    root.radius = 0;
+    root.fixed = true;
+
+    var force = d3.layout.force()
+        .gravity(0.015)
+        .charge(function(d, i) { return i ? 0 : -2000; })
+        .nodes(nodes)
+        .size([width, height]);
+
+    force.start();
+
+    var svg = d3.select("#color_bubble").append("svg")
+        .attr("width", width)
+        .attr("height", height);
+
+    svg.selectAll("circle")
+        .data(nodes.slice(5))
+      .enter().append("circle")
+        .attr("r", function(d) { return d.radius; })
+        .style("fill", function(d, i) { return color(i % 100); });
+
+    force.on("tick", function(e) {
+      var q = d3.geom.quadtree(nodes),
+          i = 0,
+          n = nodes.length;
+
+      while (++i < n) q.visit(collide(nodes[i]));
+
+      svg.selectAll("circle")
+          .attr("cx", function(d) { return d.x; })
+          .attr("cy", function(d) { return d.y; });
+    });
+
+    svg.on("mousemove", function() {
+      var p1 = d3.mouse(this);
+      root.px = p1[0];
+      root.py = p1[1];
+      force.resume();
+    });
+
+    function collide(node) {
+      var r = node.radius + 16,
+          nx1 = node.x - r,
+          nx2 = node.x + r,
+          ny1 = node.y - r,
+          ny2 = node.y + r;
+      return function(quad, x1, y1, x2, y2) {
+        if (quad.point && (quad.point !== node)) {
+          var x = node.x - quad.point.x,
+              y = node.y - quad.point.y,
+              l = Math.sqrt(x * x + y * y),
+              r = node.radius + quad.point.radius;
+          if (l < r) {
+            l = (l - r) / l * .5;
+            node.x -= x *= l;
+            node.y -= y *= l;
+            quad.point.x += x;
+            quad.point.y += y;
+          }
+        }
+        return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+      };
     }
-</style>
 
-<div>
-        <div class="script-overlap uk-container">
-            <script>
-            var width = 1280,
-                height = 700;
+    ////////////////////////////////////
+    //Responsive D3 Charts
+    ////////////////////////////////////
+    var container = d3.select(svg.node().parentNode),
+        width = parseInt(svg.style("width")),
+        height = parseInt(svg.style("height")),
+        aspect = width / height;
 
-            var nodes = d3.range(100).map(function() { return {radius: Math.random() * 12 + 4}; }),
-                root = nodes[0],
-                color = d3.scale.category10();
+    // add viewBox and preserveAspectRatio properties,
+    // and call resize so that svg resizes on inital page load
+    svg.attr("viewBox", "0 0 " + width + " " + height)
+        .attr("perserveAspectRatio", "xMinYMid")
+        .call(resize);
 
-            root.radius = 0;
-            root.fixed = true;
+    // to register multiple listeners for same event type,
+    // you need to add namespace, i.e., 'click.foo'
+    // necessary if you call invoke this function for multiple svgs
+    // api docs: https://github.com/mbostock/d3/wiki/Selections#on
+    d3.select(window).on("resize." + container.attr("id"), resize);
 
-            var force = d3.layout.force()
-                .gravity(0.015)
-                .charge(function(d, i) { return i ? 0 : -2000; })
-                .nodes(nodes)
-                .size([width, height]);
+    // get width of container and resize svg to fit it
+    function resize() {
+        var targetWidth = parseInt(container.style("width"));
+        svg.attr("width", targetWidth);
+        svg.attr("height", Math.round(targetWidth / aspect));
+    }
+</script>
 
-            force.start();
-
-            var svg = d3.select("div > div").append("svg")
-                .attr("width", width)
-                .attr("height", height);
-
-            svg.selectAll("circle")
-                .data(nodes.slice(5))
-              .enter().append("circle")
-                .attr("r", function(d) { return d.radius; })
-                .style("fill", function(d, i) { return color(i % 100); });
-
-            force.on("tick", function(e) {
-              var q = d3.geom.quadtree(nodes),
-                  i = 0,
-                  n = nodes.length;
-
-              while (++i < n) q.visit(collide(nodes[i]));
-
-              svg.selectAll("circle")
-                  .attr("cx", function(d) { return d.x; })
-                  .attr("cy", function(d) { return d.y; });
-            });
-
-            svg.on("mousemove", function() {
-              var p1 = d3.mouse(this);
-              root.px = p1[0];
-              root.py = p1[1];
-              force.resume();
-            });
-
-            function collide(node) {
-              var r = node.radius + 16,
-                  nx1 = node.x - r,
-                  nx2 = node.x + r,
-                  ny1 = node.y - r,
-                  ny2 = node.y + r;
-              return function(quad, x1, y1, x2, y2) {
-                if (quad.point && (quad.point !== node)) {
-                  var x = node.x - quad.point.x,
-                      y = node.y - quad.point.y,
-                      l = Math.sqrt(x * x + y * y),
-                      r = node.radius + quad.point.radius;
-                  if (l < r) {
-                    l = (l - r) / l * .5;
-                    node.x -= x *= l;
-                    node.y -= y *= l;
-                    quad.point.x += x;
-                    quad.point.y += y;
-                  }
-                }
-                return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
-              };
-            }
-
-            ////////////////////////////////////
-            //Responsive D3 Charts
-            ////////////////////////////////////
-            var container = d3.select(svg.node().parentNode),
-                width = parseInt(svg.style("width")),
-                height = parseInt(svg.style("height")),
-                aspect = width / height;
-
-            // add viewBox and preserveAspectRatio properties,
-            // and call resize so that svg resizes on inital page load
-            svg.attr("viewBox", "0 0 " + width + " " + height)
-                .attr("perserveAspectRatio", "xMinYMid")
-                .call(resize);
-
-            // to register multiple listeners for same event type,
-            // you need to add namespace, i.e., 'click.foo'
-            // necessary if you call invoke this function for multiple svgs
-            // api docs: https://github.com/mbostock/d3/wiki/Selections#on
-            d3.select(window).on("resize." + container.attr("id"), resize);
-
-            // get width of container and resize svg to fit it
-            function resize() {
-                var targetWidth = parseInt(container.style("width"));
-                svg.attr("width", targetWidth);
-                svg.attr("height", Math.round(targetWidth / aspect));
-            }
-        </script>
-        </div>
-        </div>
