--- a/Web/crawl/templates/text.html
+++ b/Web/crawl/templates/text.html
@@ -49,4 +49,6 @@
 <a href="#navbar" class="top-button uk-button-small uk-button-primary uk-light" uk-scroll>
     TOP
 </a>
+{% load static %}
+<script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
