Word Cloud繪圖OpenCV編碼後直接讀寫GCS API

--- a/Web/crawl/templates/index.html
+++ b/Web/crawl/templates/index.html
@@ -16,7 +16,7 @@
         width: auto;
         height: 100vh;
         background-repeat:no-repeat;
-        background-image: url('https://i.imgur.com/C16U7JK.jpg');
+        background-image: url('{% static 'media/index_bg.jpg' %}');
         background-repeat: no-repeat;
         background-position: center top;
         filter: brightness(0.2) grayscale(90%);
