--- a/Web/crawl/templates/error_page/404.html
+++ b/Web/crawl/templates/error_page/404.html
@@ -7,4 +7,5 @@
     uk-height-viewport="offset-bottom: 10">
     </div>
 </div>
+<script src="{% static 'js/navbar.bg.js' %}"></script>
 {% endblock %}
